# spot_ros2

./: .clang-format  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  BUILD.bazel  CPPLINT.cfg  Dockerfile  Dockerfile.arm  GraphNav.md  LICENSE  MODULE.bazel  README.md  custom_dds_profile.xml  docker-compose.yaml  generate_additional_debs.py  install_spot_ros2.sh  install_spot_ros2_arm.sh  jammy.lock.json  jammy.yaml  pull_request_template.md  pyproject.toml  rules_python.patch  run.sh  setup.bash
examples/inverse_kinematics/: README.md  package.xml  setup.py
examples/nogo_regions/: README.md  package.xml  setup.cfg  setup.py
examples/simple_walk_forward/: README.md  package.xml  setup.cfg  setup.py
spot_common/: BUILD.bazel  README.md  package.xml  requirements.in  setup.cfg  setup.py
spot_controllers/: BUILD.bazel  CMakeLists.txt  README.md  package.xml  spot_controllers.xml
spot_controllers/src/: foot_state_broadcaster.cpp  forward_state_controller.cpp  spot_controller_utils.cpp  spot_forward_controller.cpp  spot_imu_broadcaster.cpp  spot_joint_controller.cpp  spot_pose_broadcaster.cpp
spot_driver/: BUILD.bazel  CMakeLists.txt  EyeInHandCalibration.md  LICENSE  README.md  package.xml  requirements.in  setup.cfg  setup.py
spot_driver/config/: camera_sources_example.yaml  spot_login.yaml  spot_ros.yaml  spot_ros_example.yaml
spot_driver/launch/: leaseless.launch.py  local_grid.launch.py  point_cloud_xyz.launch.py  point_cloud_xyzrgb.launch.py  record_image_data.launch.py  rs_launch.py  rviz.launch.py  spot_depth_publishers.launch.py  spot_depth_registered_publishers.launch.py  spot_driver.launch.py  spot_driver_and_estop.launch.py  spot_driver_experimental_zenoh.launch.py  spot_driver_with_namespace.launch.py  spot_image_publishers.launch.py
spot_driver/rviz/: spot_template.yaml  viz_spot.rviz
spot_driver/scripts/: estop_gui.py  estop_nogui.sh
spot_driver/spot_driver/: README.md  calibrated_reregistered_hand_camera_depth_publisher.py  command_spot_driver.py  conversions.py  corrected_odom.py  estop_gui.py  estop_nogui.py  manual_conversions.py  multiple_node_publisher.py  multiple_node_subscriber.py  publish_camera.py  publish_cameras.py  robot_command_util.py  ros_helpers.py  single_goal_action_server.py  spot_alerts.py  spot_commander.py  spot_local_grid_publisher.py  spot_ros2.py  spot_sim.py  spot_wrapper.py
spot_driver/src/: test_node.cpp
spot_driver/test/: CMakeLists.txt  conftest.py  profile.xml  test_copyright.py  test_dock.py  test_execute_dance.py  test_flake8.py  test_get_choreography_status.py  test_list_all_dances.py  test_list_all_moves.py  test_list_sounds.py  test_locomotion_mode.py  test_max_velocity.py  test_pep257.py  test_power_management.py  test_power_off.py  test_recorded_state_to_animation.py  test_release.py  test_robot_command.py  test_rollover.py  test_self_right.py  test_sit.py  test_spot_driver.py  test_stair_mode.py  test_stand.py  test_start_recording_state.py  test_stop.py  test_stop_recording_state.py  test_tmp.py  test_undock.py  test_upload_animation.py
spot_driver_cpp/: CMakeLists.txt  LICENSE  README.md  package.xml
spot_driver_cpp/launch/: get_images.launch.xml  spot_image_publisher.launch.xml
spot_driver_cpp/src/: inverse_kinematic_node.cpp  inverse_kinematic_node_main.cpp  kinematic_component.cpp  kinematic_node.cpp  kinematic_node_main.cpp  kinematic_service.cpp  kinematic_utils.cpp  spot_image_publisher.cpp  spot_image_publisher_component.cpp  spot_image_publisher_node.cpp  spot_image_publisher_node_component.cpp  spot_image_publisher_node_main.cpp  spot_image_sources.cpp  spot_interface.cpp
spot_driver_cpp/test/: CMakeLists.txt  test_parameter_interface.cpp  test_spot_image_publisher.cpp  test_spot_image_publisher_node.cpp  test_spot_image_sources.cpp
spot_examples/: BUILD.bazel  README.md  package.xml  setup.cfg  setup.py
spot_examples/docs/: arm_simple.md  arm_wasd.md  arm_with_body_follow.md  batch_trajectory.md  hello_spot.md  send_inverse_kinematics_requests.md  simple_sub.md  spot_in_circle.md  walk_forward.md  wasd.md
spot_examples/spot_examples/: arm_simple.py  arm_walk_to_object.py  arm_wasd.py  arm_with_body_follow.py  batch_trajectory.py  hello_spot.py  nogo_example.py  robot_commander.py  send_inverse_kinematics_requests.py  simple_spot_commander.py  simple_sub.py  spot_in_circle.py  spot_in_circle_sdk.py  spot_navigation_client.py  tf_listener_wrapper.py  trajectory_test.py  walk_forward.py  wasd.py
spot_hardware_interface/: BUILD.bazel  CMakeLists.txt  README.md  package.xml  spot_hardware_interface.xml
spot_hardware_interface/src/: spot_hardware_interface.cpp  spot_leasing_interface.cpp
spot_local_grid/: package.xml  setup.cfg  setup.py
spot_local_grid/spot_local_grid/: local_grid_pub.py
spot_msgs/: BUILD.bazel  CMakeLists.txt  README.md  package.xml  test_spot_msgs_include.cpp
spot_msgs/action/: ArmSurfaceContact.action  ExecuteDance.action  Manipulation.action  NavigateTo.action  NavigateToDynamic.action  RobotCommand.action  Trajectory.action
spot_msgs/msg/: GripperCameraParams.msg  Homography.msg  JointCommand.msg  MobilityParams.msg  StitcherHomographies.msg  SystemFault.msg
spot_msgs/srv/: AcquireLease.srv  ChoreographyRecordedStateToAnimation.srv  ChoreographyStartRecordingState.srv  ChoreographyStopRecordingState.srv  Dock.srv  ExecuteDance.srv  GetChoreographyStatus.srv  GetGripperCameraParameters.srv  GetGripperCameraParams.srv  GetInverseKinematicSolutions.srv  GetLEDBrightness.srv  GetLogpointStatus.srv  GetMissionInfo.srv  GetMissionState.srv  GetPTZ.srv  GetPtzPosition.srv  GetVolume.srv  GraphNavClearGraph.srv  GraphNavGetLocalizationPose.srv  GraphNavInitialize.srv  (+38 more)
spot_ros2_control/: BUILD.bazel  CMakeLists.txt  README.md  forward_state_controller.xml  package.xml  spot_passthrough_controller.xml  spot_ros2_control.xml
spot_ros2_controllers/: CMakeLists.txt  package.xml  spot_passthrough_controller.xml
spot_rviz_plugins/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
spot_stitcher/: CMakeLists.txt  package.xml
(+1449 files in other folders)
