module(
    name = "spot_ros2",
    version = "0.0.0", # TODO(astout) is there a version somewhere we can reference?
    compatibility_level = 1,
)

############### BAZEL DEPS ########################
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_distroless", version = "0.5.1")

# use rules_rai_ros
# Until we have our own Bazel registry, this will need to be an override
bazel_dep(name = "rules_rai_ros")
git_override(
    module_name = "rules_rai_ros",
    commit = "5df35ca8bf39131a11d339a59ccf6f3439b9737a",
    remote = "https://github.com/bdaiinstitute/rules_rai_ros.git",
)

############### DISTROLESS SETUP ##################
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "jammy",
    lock = "//:jammy.lock.json",
    manifest = "//:jammy.yaml",
)
use_repo(apt, "jammy")


############### ROS SETUP #########################
ros = use_extension("@rules_rai_ros//ros:extensions.bzl", "ros")
ros.parse(
    name = "humble",
    lock = "//:jammy.lock.json",
    non_ros_deps = [
        "libspdlog1",
        "libfmt8",
        "libtinyxml2-9",
    ],
)
use_repo(ros, "humble")



