module(
    name = "spot_ros2",
    version = "0.0.0", # TODO(astout) is there a version somewhere we can reference?
    compatibility_level = 1,
)

############### BAZEL DEPS ########################
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "rules_python", version = "0.40.0") # transitive dep of r_r_r, not sure why I need to include here
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_multirun", version = "0.11.0")
# bazel_dep(name = "platforms", version = "0.0.11") # transitive dep of r_r_r, not sure why I need to include here
bazel_dep(name = "aspect_rules_py", version = "1.3.4")
bazel_dep(name = "rules_uv", version = "0.71.0")
# use rules_rai_ros
# Until we have our own Bazel registry, this will need to be an override
bazel_dep(name = "rules_rai_ros")
git_override(
    module_name = "rules_rai_ros",
    commit = "15aebd5bb72f6b59d24eac1c5e69f398f73d1ca1",
    remote = "https://github.com/bdaiinstitute/rules_rai_ros.git",
)

# only used for testing
bazel_dep(name = "googletest", version = "1.16.0.bcr.1", dev_dependency = True)


############### PYTHON SETUP ######################
# I'm a little hazy on why I need to declare this directly.

python_version = "3.10"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = python_version,
)
use_repo(python, "python_3_10")

# This dictionary specifies which Python dependency "contexts" exist and what
# platform specific lock files should be created.
#
# Available platform architectures: "x86_64", "aarch64"
#
# The context names should match the standardized names of the `.in` files in
# this directory. Specifically: `requirements_<CONTEXT>.in`.  Lock files will
# be generated in the `locks` subdirectory with names following this convention:
# `requirements_<CONTEXT>_<ARCH>.lock`.
#
# This dictionary must match the one in deps/python/BUILD.bazel!
LOCKFILE_PLATFORMS = {
    # CONTEXT : ( ARCHITECTURES )
    "main": ("x86_64", "aarch64"),
}

REQUIREMENT_CYCLES = {
    "main": {},
}

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

[
    pip.parse(
        enable_implicit_namespace_pkgs = True,  # disable automatic __init__.py creation
        hub_name = "pip{}".format("_" + context if context != "main" else ""),
        python_version = python_version,
        requirements_by_platform = {
            "//deps/python/locks:requirements_{}_{}.lock".format(context, arch): "linux_{}".format(arch)
            for arch in LOCKFILE_PLATFORMS[context]
        },
        experimental_requirement_cycles = REQUIREMENT_CYCLES[context],
    )
    for context in LOCKFILE_PLATFORMS
]

[
    use_repo(pip, "pip{}".format("_" + context if context != "main" else ""))
    for context in LOCKFILE_PLATFORMS
]

############### DISTROLESS SETUP ##################
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "jammy",
    lock = "//:jammy.lock.json",
    manifest = "//:jammy.yaml",
)
use_repo(apt, "jammy")


############### ROS SETUP #########################
ros = use_extension("@rules_rai_ros//ros:extensions.bzl", "ros")
ros.parse(
    name = "humble",
    lock = "//:jammy.lock.json",
)
ros.additional_deb(
    hub_name = "humble",
    name = "spot-cpp-sdk",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/spot-cpp-sdk/releases/download/v4.1.1/spot-cpp-sdk_4.1.1_amd64.deb"]},
    sha256_by_arch = {"amd64": "471b9983b17cb13f9e4a74b2b32bbe41ccbd72fb9a5b82609f03e7f2cd2799f3"},
    dependencies = ["libgrpc++1"],
    cc_includes = ["opt/spot-cpp-sdk/include"],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "e8b3a165766047c8b0ab9669020dd89ff15336d780f2500be7e891caa984f839"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-auto-return-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-auto-return-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "e86e48cfb34569f6f0231d29ad8dbdfc009465189feb3612b26e9099bce0de69"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-autowalk-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-autowalk-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "d4a45e476d313a76965cfc3ecc3ce40a25e07608b155807fd46b4d0feae5336a"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-cmake-module",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-cmake-module_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "1f42a9e838a50434a5868774a037d94ac95aa7dbf280aa313c58b148406e4d9c"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-graph-nav-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-graph-nav-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "f7f253ead8e6442db63f4d6d086e1919210e31304c7c8ab041600d7ffa1d11f2"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-keepalive-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-keepalive-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "557d4ef078740451e8f29465ddf18c49fc3a9b817ca08f5e465dfbd2882092a6"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-log-status-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-log-status-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "11ef2681b1f71d484106bff079f695a05afbf9a97660b3dac22411cf8ff2c694"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-metrics-logging-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-metrics-logging-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "eaa04308a5b3b85b88d2906ad5320325edeb14c743a1a6d2e043f207a76992c3"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-mission-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-mission-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "6e903c901be4592498ad3512392b49672beac0f80777bde399d9c4320dc6eb80"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "ba9deb485448a064fcea523f0afdb39369134dba7c5659b98caaf23e81c9e33c"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-spot-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-spot-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "161f232edc4d91de14a5f291f918826d60340ec50c3e0f0821483467e460a29b"},
    dependencies = [],
    cc_includes = [],
)
ros.additional_deb(
    hub_name = "humble",
    name = "bosdyn-spot-cam-api-msgs",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-bosdyn-spot-cam-api-msgs_4.1.1-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "8a953ba65884a0ee26845a5fffd7cf3407cf58f1d18cfe3951a29738a49deeff"},
    dependencies = [],
    cc_includes = [],
)
# do I need this one?
ros.additional_deb(
    hub_name = "humble",
    name = "proto2ros",
    # TODO(astout) add arm64
    urls_by_arch = {"amd64": ["https://github.com/bdaiinstitute/bosdyn_msgs/releases/download/4.1.1-1/ros-humble-proto2ros_1.0.0-0jammy_amd64.deb"]},
    sha256_by_arch = {"amd64": "86c6c273d4d63f991bf5a08c1163d2e040d52a381054a8e0dea617c87afd4d5d"},
    dependencies = [],
    cc_includes = [],
)

use_repo(ros, "humble")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "spot_wrapper",
    build_file = "//:deps/spot_wrapper/spot_wrapper.BUILD.bazel",
    commit = "041e5a33913367aaf2c6aaca1888dd58ee655560",
    remote = "https://github.com/bdaiinstitute/spot_wrapper.git",
)

git_repository(
    name = "spot_description",
    build_file = "//:deps/spot_description/spot_description.BUILD.bazel",
    commit = "a38f992450a903ddb960d64d13d4c505b173a4b6",
    remote = "https://github.com/bdaiinstitute/spot_description.git",
)
