load("@humble//ros:defs.bzl", "ros")

package(default_visibility = ["//visibility:public"])

exports_files(["requirements.in"])

ros.package_manifest(
    name = "pkg",
    package_name = "spot_common",
)

ros.py_library(
    name = "spot_common",
    srcs = [
        "spot_common/launch/spot_launch_helpers.py",
    ],
    imports = ["."],
    package = ":pkg",
    deps = [
        "@ros_utilities//synchros2",
        "@pip//lark",
        "@pip//pyyaml",
        "@humble//:ros-humble-launch",
        "@spot_wrapper//:spot_wrapper",
    ]
)

ros.py_test(
    name = "test_launch_helpers",
    srcs = ["test/pytests/test_launch_helpers.py"],
    pytest_main = False,
    deps = [
        ":spot_common",
    ],
    package_collisions = "warning", # TODO: I think we need to understand why this is happening...
)