<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2025 Boston Dynamics AI Institute LLC. All rights reserved.
-->
<package format="3">
  <name>spot_common</name>
  <version>0.1.0</version>
  <description>Common utilities in the Spot ROS 2 stack</description>
  <maintainer email="opensource@theaiinstitute.com">AI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>spot_wrapper</exec_depend>
  <exec_depend>synchros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
